--- a/package.json
+++ b/package.json
@@ -1,24 +1,7 @@
 {
-  "name": "string-length",
-  "version": "0.1.0",
+  "name": "sindresorhus-string-length",
   "description": "Get the real length of a string by correctly counting astral symbols",
-  "license": "MIT",
-  "repository": "sindresorhus/string-length",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "mocha",
-    "browser": "browserify -s $npm_package_name -o browser.js ."
-  },
-  "files": [
-    "index.js"
-  ],
+  "version": "0.1.0",
   "keywords": [
     "unicode",
     "string",
@@ -29,8 +12,6 @@
     "surrogates",
     "codepoints"
   ],
-  "devDependencies": {
-    "mocha": "*",
-    "browserify": "^3.0.0"
-  }
+  "dependencies": {},
+  "license": "MIT"
 }
